--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,12 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
-    <LinearLayout
+    <ScrollView
+        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingTop="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -19,228 +18,223 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:padding="10sp">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="15sp"
-                android:layout_weight="1"
-                android:background="@color/lightBlue"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="15sp">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10sp"
+                    android:layout_margin="10sp"
                     android:layout_weight="1"
-                    android:text="# Users"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/txtViewUser"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="00"
-                    android:textColor="@color/black"
-                    android:textSize="45sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="15sp"
-                android:layout_weight="1"
-                android:background="@color/lightBlue"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="15sp">
-
-                <TextView
-                    android:id="@+id/textView1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10sp"
-                    android:layout_weight="1"
-                    android:text="# Books"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/txtViewBook"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="00"
-                    android:textColor="@color/black"
-                    android:textSize="45sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="15sp"
-                android:layout_weight="1"
-                android:background="@color/lightBlue"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="15sp">
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10sp"
-                    android:layout_weight="1"
+                    android:background="@color/lightBlue"
                     android:gravity="center"
-                    android:text="# Copies"
-                    android:textSize="16sp" />
+                    android:orientation="vertical"
+                    android:padding="15sp">
 
-                <TextView
-                    android:id="@+id/txtViewCopies"
-                    android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10sp"
+                        android:layout_weight="1"
+                        android:text="# Users"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/txtViewUser"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="00"
+                        android:textColor="@color/black"
+                        android:textSize="45sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_margin="10sp"
                     android:layout_weight="1"
-                    android:text="00"
-                    android:textColor="@color/black"
-                    android:textSize="45sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="15sp"
-                android:layout_weight="1"
-                android:background="@color/lightBlue"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="15sp">
-
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10sp"
-                    android:layout_weight="1"
-                    android:text="# Genre"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:id="@+id/txtViewGenre"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="00"
-                    android:textColor="@color/black"
-                    android:textSize="45sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="15sp"
-                android:layout_weight="1"
-                android:background="@color/lightBlue"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="15sp">
-
-                <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10sp"
-                    android:layout_weight="1"
+                    android:background="@color/lightBlue"
                     android:gravity="center"
-                    android:text="# Lending Books"
-                    android:textSize="16sp" />
+                    android:orientation="vertical"
+                    android:padding="15sp">
 
-                <TextView
-                    android:id="@+id/txtViewLending"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="00"
-                    android:textColor="@color/black"
-                    android:textSize="45sp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/textView1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10sp"
+                        android:layout_weight="1"
+                        android:text="# Books"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/txtViewBook"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="00"
+                        android:textColor="@color/black"
+                        android:textSize="45sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="15sp"
-                android:layout_weight="1"
-                android:background="@color/lightBlue"
-                android:gravity="center"
-                android:orientation="vertical"
-                android:padding="15sp">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10sp"
+                    android:layout_margin="10sp"
                     android:layout_weight="1"
-                    android:text="# Late Return"
-                    android:textSize="16sp" />
+                    android:background="@color/lightBlue"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="15sp">
 
-                <TextView
-                    android:id="@+id/txtViewReturn"
-                    android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10sp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="# Copies"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/txtViewCopies"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="00"
+                        android:textColor="@color/black"
+                        android:textSize="45sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_margin="10sp"
                     android:layout_weight="1"
-                    android:text="00"
-                    android:textColor="@color/black"
-                    android:textSize="45sp"
-                    android:textStyle="bold" />
+                    android:background="@color/lightBlue"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="15sp">
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10sp"
+                        android:layout_weight="1"
+                        android:text="# Genre"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/txtViewGenre"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="00"
+                        android:textColor="@color/black"
+                        android:textSize="45sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10sp"
+                    android:layout_weight="1"
+                    android:background="@color/lightBlue"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="15sp">
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10sp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="# Lending Books"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/txtViewLending"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="00"
+                        android:textColor="@color/black"
+                        android:textSize="45sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10sp"
+                    android:layout_weight="1"
+                    android:background="@color/lightBlue"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="15sp">
+
+                    <TextView
+                        android:id="@+id/textView5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10sp"
+                        android:layout_weight="1"
+                        android:text="# Late Return"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/txtViewReturn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="00"
+                        android:textColor="@color/black"
+                        android:textSize="45sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
+    </ScrollView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center|bottom"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnAddBook"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:text="Add Book" />
-
-            <Button
-                android:id="@+id/btnAddUser"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:text="Add User" />
-
-
-        </LinearLayout>
-    </LinearLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/lightBlue"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_navigation_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
