--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -117,18 +117,18 @@
 
                 <TextView
                     android:id="@+id/txtGenre"
-                    android:layout_width="20sp"
+                    android:layout_width="30sp"
+                    android:layout_marginEnd="15sp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="@string/genre" />
 
-                <EditText
-                    android:id="@+id/editTxtGenre"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <Spinner
+                    android:id="@+id/spinnerGenre"
+                    android:layout_width="150sp"
+                    android:layout_height="40sp"
                     android:layout_weight="1"
-                    android:ems="10"
-                    android:inputType="textPersonName" />
+                    android:entries="@array/genre"/>
 
             </LinearLayout>
 
@@ -155,6 +155,31 @@
                     android:inputType="number" />
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="25sp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageViewBookCover"
+                    android:layout_width="80sp"
+                    android:layout_height="120sp"
+                    android:scaleType="centerCrop"
+                    android:layout_marginRight="50sp"
+                    android:src="@drawable/libreria_icon" />
+
+
+                <Button
+                    android:id="@+id/btnSelectCover"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Select Image" />
+
+            </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
